# splflix

./: .gitignore  CMakeLists.txt  JsonReader.cpp  JsonReader.h  Watchable.h  makefile  test.cpp
include/: Action.h  Session.h  User.h  Watchable.h
src/: Action.cpp  Session.cpp  User.cpp  Watchable.cpp
